fixing size of home screen on mobile

--- a/src/pages/Mobile/Mobile.css
+++ b/src/pages/Mobile/Mobile.css
@@ -19,6 +19,7 @@
   position: relative;
   width: 100vw;
   height: 100vh;
+  height: 100dvh; /* adjusts for mobile browser chrome */
   overflow: hidden;
 }
 
